--- a/app_pack/templates/layout.html
+++ b/app_pack/templates/layout.html
@@ -4,42 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="{{url_for('static', filename='favicon.ico')}}" type="image/ico" rel="icon">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet"> -->
+	<!-- Google font -->
+	<link href="https://fonts.googleapis.com/css?family=Hind:400,700" rel="stylesheet">
+	<!-- <link type="text/css" rel="stylesheet" href="static/css/fnt.css" /> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <link href="static/favicon.png" type="png" rel="icon">
-    <link href="static/styles.css" rel="stylesheet">
+
+	<!-- Bootstrap -->
+	<!-- <link type="text/css" rel="stylesheet" href="static/css/bootstrap.min.css" /> -->
+
+	<!-- Slick -->
+	<!-- <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='css/slick.css')}}" />
+	<link type="text/css" rel="stylesheet" href="{{url_for('static', filename='css/slick-theme.css')}}" /> -->
+
+	<!-- nouislider -->
+	<!-- <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='css/nouislider.min.css')}}" />  -->
+
+	<!-- Font Awesome Icon -->
+	<link type="text/css" rel="stylesheet" href="{{url_for('static', filename='css/font-awesome.min.css')}}" /> 
+
+	<!-- Custom stlylesheet -->
+	<link type="text/css" rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" /> 
+    <!-- <link href="static/styles.css" rel="stylesheet"> -->
 
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
 
-    {% if session.logged_in %}
 
-    <div class="jumbotron" style="text-align: left;">
-        <a href="/logout">Logout</a>
-    </div>
-
-    {% else %}
-
-    <div class="jumbotron">
-        <a href="/register">Register</a>
-        <a href="/login">Log In</a>
-    </div>
-
-    {% endif %}
-
-
-    {% block error_ %}
-        <div class="alert alert-primary border text-center" role="alert">
-            {% for message in get_flashed_messages() %}
-            <div class="flash">{{ message }}</div>
-            {% endfor %}
-        </div>
-        
-        {% if error %}
-            <p class=error><strong>Error:</strong> {{ error }}
-        {% endif %}
-    {% endblock error_ %}
 
    <div class="container">
     {% block main %}
@@ -48,4 +42,15 @@
     </div>
     
 </body>
+
+<script src="{{url_for('static', filename='js/jquery.min.js')}}"></script> 
+<script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script> 
+<!-- <script src="{{url_for('static', filename='js/slick.min.js')}}"></script>  -->
+<!-- <script src="{{url_for('static', filename='js/nouislider.min.js')}}"></script>  -->
+<script src="{{url_for('static', filename='js/jquery.zoom.min.js')}}"></script> 
+<script src="{{url_for('static', filename='js/main.js')}}"></script> 
+<script src="{{url_for('static', filename='js/forum.js')}}"></script>  
+
+
+
 </html>
