--- a/app_pack/static/css/style.css
+++ b/app_pack/static/css/style.css
@@ -72,13 +72,13 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
 }
 
-a {
+a, .alink {
   color: #30323A;
   -webkit-transition: 0.3s color;
   transition: 0.3s color;
 }
 
-a:hover, a:focus {
+a:hover, a:focus, .alink:hover, .alink:focus  {
   color: #F8694A;
   text-decoration: none;
   outline: none;
