--- a/app_pack/templates/posts.html
+++ b/app_pack/templates/posts.html
@@ -21,7 +21,7 @@
 
 <div class="row card d-flex align-content-center justify-content-center flex-wrap" id="{{post['bbcode_uid']}}">
 
-    <div class="col-12 card-el card-el-single" data-id='{{post["post_id"]}}' onClick="watch_post(this);">
+    <div class="col-12 card-el card-el-single" data-id='{{post["post_id"]}}'>
         <div class="row">
             <div class="col-md-3 col-sm-12 flexbox" style="background-color: #f6ecd4">
 
